WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
250359
Interaction regions are sometimes ordered incorrectly in the layer hierarchy
https://bugs.webkit.org/show_bug.cgi?id=250359
Summary
Interaction regions are sometimes ordered incorrectly in the layer hierarchy
Mike Wyrzykowski
Reported
2023-01-09 21:54:32 PST
Interaction regions are sometimes ordered incorrectly in the layer hierarchy
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-01-09 21:54:55 PST
radar://102919011
Mike Wyrzykowski
Comment 2
2023-01-10 01:46:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8441
Etienne
Comment 3
2023-02-01 12:50:31 PST
I think we can dupe to 250860.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug