Interaction regions are sometimes ordered incorrectly in the layer hierarchy https://bugs.webkit.org/show_bug.cgi?id=250359 <radar://102919011>

Reviewed by NOBODY (OOPS!).

Appending to the end resulted in these being after the video layer,
which resulted in unexpected behavior.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeInteractionRegionLayers.mm:
(WebKit::updateLayersForInteractionRegions):